Fixed gap issue on inputs

--- a/client/src/components/Layout/Header/Header.css
+++ b/client/src/components/Layout/Header/Header.css
@@ -199,6 +199,8 @@
     .primary-navigation {
         position: fixed;
         inset: 0 0 0 15%;
+        --gap: 0;
+        gap: 0rem 0rem !important;
         width: 100%;
         max-width: 100dvw;
         height: 110vh;
